Add basic template with sample data

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
 <head>
-  <title> Data Roll</title>
+  <title>Roll</title>
+  <script src="source.js"></script>
 </head>
 <body>
-  On page load, display a random nation along with key facts including capital city. 
+  <p>On page load, display a random nation along with key facts including capital city.</p>
+  <div id="heading">Nation</div>
+  <div id="sub">Capital</div>
+  <div id="facts">
+    <ul>
+    </ul>
+  </div>
+
 </body>
 </html>
