--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
   <p>On page load, display a random nation along with key facts including capital city.</p>
-  <div id="heading">Nation</div>
-  <div id="sub">Capital</div>
+  <h1>Nation: <span id="heading">Nation</span></h1>
+  <h1>Capital: <span id="sub">Capital</span></h1>
+  <h1>Population: <span id="pop">Capital</span></h1>
   <div id="facts">
     <ul>
     </ul>
