Add nation data

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
   <title>Roll</title>
-  <script src="source.js"></script>
 </head>
 <body>
   <p>On page load, display a random nation along with key facts including capital city.</p>
   <h1>Nation: <span id="heading">Nation</span></h1>
   <h1>Capital: <span id="sub">Capital</span></h1>
-  <h1>Population: <span id="pop">Capital</span></h1>
+  <h1>Population: <span id="pop">Population</span></h1>
   <div id="facts">
     <ul>
     </ul>
   </div>
-
+  <script src="data.js"></script>
+  <script src="source.js"></script>
 </body>
 </html>
