--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
 <head>
   <title>Roll</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<div class="wrapper">
   <p>On page load, display a random nation along with key facts including capital city.</p>
   <h1>Nation: <span id="heading">Nation</span></h1>
   <h1>Capital: <span id="sub">Capital</span></h1>
   <h1>Population: <span id="pop">Population</span></h1>
-  <div id="facts">
+  <h2>Languages</h2>
+  <div id="lang"> 
     <ul>
     </ul>
   </div>
+ </div> 
   <script src="data.js"></script>
   <script src="source.js"></script>
 </body>
