--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 <div class="wrapper">
   <p>On page load, display a random nation along with key facts including capital city.</p>
-  <h1>Nation: <span id="nation">Nation</span></h1>
-  <h1>Capital: <span id="capital">Capital</span></h1>
+  <h1><span id="nation">Nation</span></h1>
+  <h1><span id="capital">Capital</span></h1>
   <h1>Population: <span id="pop">Population</span></h1>
   <h2>Languages</h2>
   <div id="lang"> 
