--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
 </head>
 <body>
 <div class="wrapper">
-  <p>On page load, display a random nation along with key facts including capital city.</p>
-  <h1><span id="nation">Nation</span></h1>
-  <h1><span id="capital">Capital</span></h1>
-  <h1>Population: <span id="pop">Population</span></h1>
+
+<div class="hidden" id="nextData">
+  <p>next Data</p>
+  <h1><span id="nNation">Nation</span></h1>
+  <h1><span id="nCapital">Capital</span></h1>
+  <h1>Population: <span id="nPop">Population</span></h1>
   <h2>Languages</h2>
-  <div id="lang"> 
+  <div id="nLang"> 
     <ul>
     </ul>
   </div>
- </div> 
+ </div>
+
+<div class="" id="currentData">
+  <p>On page load, display a random nation along with key facts including capital city.</p>
+  <h1><span id="cNation">Nation</span></h1>
+  <h1><span id="cCapital">Capital</span></h1>
+  <h1>Population: <span id="cPop">Population</span></h1>
+  <h2>Languages</h2>
+  <div id="cLang"> 
+    <ul>
+    </ul>
+  </div>
+ </div>
+
+ </div>
   <script src="data.js"></script>
   <script src="source.js"></script>
 </body>
