Add better fade effect

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <div class="hidden" id="nextData">
     <p>next Data</p>
-    <h1><span id="nNation">Nation</span></h1>
-    <h1><span id="nCapital">Capital</span></h1>
-    <h1>Population: <span id="nPop">Population</span></h1>
+    <h1>Nation <span id="nNation">Nation</span></h1>
+    <h1>Captial <span id="nCapital">Capital</span></h1>
+    <h1>Population: <span id="nPop"></span></h1>
     <h2>Languages</h2>
     <div id="nLang"> 
       <ul>
@@ -22,9 +22,9 @@
 
   <div class="" id="currentData">
     <p>On page load, display a random nation along with key facts including capital city.</p>
-    <h1><span id="cNation">Nation</span></h1>
-    <h1><span id="cCapital">Capital</span></h1>
-    <h1>Population: <span id="cPop">Population</span></h1>
+    <h1>Nation <span id="cNation">Nation</span></h1>
+    <h1>Captial <span id="cCapital">Capital</span></h1>
+    <h1>Population: <span id="cPop"></span></h1>
     <h2>Languages</h2>
     <div id="cLang"> 
       <ul>
