--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
   <div class="wrapper">
     <div>
-      <h1>Nation: <span class="x nation"></span>   <span class="y hidden nation"></span></h1>
-      <h1>Captial: <span class="x capital"></span> <span class="y hidden capital"></span></h1>
+      <h1>State: <span class="x nation"></span>   <span class="y hidden nation"></span></h1>
+      <h1>English: <span class="x engNation"></span>   <span class="y hidden engNation"></span></h1>
+      <h1>Capital: <span class="x capital"></span> <span class="y hidden capital"></span></h1>
       <h1>Population: <span class="x pop"></span>  <span class="y hidden pop"></span></h1>
-      <h2>Languages</h2>
+      <h1>Languages</h1>
       <div class="x lang"> 
         <ul>
         </ul>
