--- a/index.html
+++ b/index.html
@@ -6,25 +6,32 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div>
-      <h1>State: <span class="x nation"></span>   <span class="y hidden nation"></span></h1>
-      <h1>English: <span class="x engNation"></span>   <span class="y hidden engNation"></span></h1>
-      <h1>Capital: <span class="x capital"></span> <span class="y hidden capital"></span></h1>
-      <h1>Population: <span class="x pop"></span>  <span class="y hidden pop"></span></h1>
-      <h1>Languages</h1>
-      <div class="x lang"> 
-        <ul>
-        </ul>
-      </div>
-      <div class="y hidden lang"> 
-        <ul>
-        </ul>
-      </div>
+
+ <div class="row">
+   <div class="wrapper">
+   <div class="data">
+    
+    <h1>State: <span class="x nation"></span>   <span class="y hidden nation"></span></h1>
+    <h1>English: <span class="x engNation"></span>   <span class="y hidden engNation"></span></h1>
+    <h1>Capital: <span class="x capital"></span> <span class="y hidden capital"></span></h1>
+    <h1>Population: <span class="x pop"></span>  <span class="y hidden pop"></span></h1>
+    <h1>Languages</h1>
+    <div class="x lang"> 
+      <ul>
+      </ul>
+    </div>
+    <div class="y hidden lang"> 
+      <ul>
+      </ul>
     </div>
 
+    </div>
+
+    <div id="flag"></div>
   </div>
-  <script src="data.js"></script>
-  <script src="source.js"></script>
+
+</div>
+<script src="data.js"></script>
+<script src="source.js"></script>
 </body>
 </html>
